--- a/src/frontend/components/SideBarItem/Folder/Folder.css
+++ b/src/frontend/components/SideBarItem/Folder/Folder.css
@@ -59,7 +59,6 @@
 .children-container {
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
   gap: 4px;
 }
 
