--- a/src/frontend/pages/Landing/Landing.css
+++ b/src/frontend/pages/Landing/Landing.css
@@ -5,5 +5,6 @@
     color: #d79921;
     width: 100%;
     left:0%;
+    top: 0;
     pointer-events: none;
 }
