--- a/src/frontend/pages/LoadBlog/LoadBlog.css
+++ b/src/frontend/pages/LoadBlog/LoadBlog.css
@@ -37,6 +37,7 @@
   text-align: left;
   z-index: 1;
   white-space: pre-wrap;
+  margin-top: 10px;
 }
 
 .loading {
